# python-db

./: .cspell.json  .gitignore  .secrets.baseline  CLAUDE.md  README.md  db_connect_test.py  defaults.py  ideas.md  options.md  pyproject.toml  requirements.txt
demos/azure_sql_mi/: azure_sql_mi_demo.py  config.example.py  defaults.py
demos/sqlalchemy_core/: README.md  sqlalchemy_demo.py  start-mysql.sh  start-postgres.sh  stop-mysql.sh  stop-postgres.sh
demos/sqlite_local/: README.md  sqlite_demo.py
shared/: runner.py
