[project]
name = "python-db"
version = "0.1.0"
description = "Self-contained Python database connectivity demos, from local SQLite to Azure SQL Managed Instance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "pyodbc>=4.0,<6.0",
    "psycopg2-binary>=2.9,<3.0",
    "pymysql>=1.1,<2.0",
    "typer>=0.12,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # bandit-style security checks
]
ignore = [
    "S101",  # asserts are fine in demos
]

[tool.ruff.lint.per-file-ignores]
# Demos use parameterised SQL throughout; the S608 false-positive on f-string
# fragments inside docstrings/log messages is noisy and not a real risk here.
"demos/**/*.py" = ["S608"]
